Adding many sections and SEO description.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="Empower your brand with clear, creative communication. Discover our strategic storytelling, visual identity design, and user-focused digital solutions." />
     <title>LandingPage</title>
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="main-image">
-        <img src="assets/image.png" alt="main image" loading="lazy" />
+        <img src="assets/main-img.png" alt="main image" loading="lazy" />
       </div>
     </main>
     <section class="features">
@@ -207,7 +207,7 @@
       <div class="widget">
         <img src="assets/widget.png" alt="widget image" />
       </div>
-      <div class="widget-text jackpots-text">
+      <div class="jackpots-text">
         <h3>
           Ultimate widgets of <br />
           collection that will be <br />
@@ -222,6 +222,60 @@
           <span>Completely responsive features</span>
           <a href="#" class="explore-details">Explore Details</a>
         </div>
+      </div>
+    </section>
+    <section class="plan-section">
+      <div class="policy">
+        <h3>Meet our exciting pricing policy</h3>
+        <p>
+          Focus only on the meaning, we take care of the design. As soon as the
+          meeting <br />
+          end you can export in one click into your preferred format.
+        </p>
+        <span>Save 20%</span>
+        <div class="plan">
+          <span>Monthly Plan</span>
+          <span>Annual Plan</span>
+        </div>
+      </div>
+      <div class="Free-Premium">
+        <div class="Free">
+          <span class="recommended">Recommended</span>
+          <div class="Free-Premium-head">
+            <h4>Free Plan</h4>
+          <p>For Small teams or office</p>
+          </div>
+          <ul>
+            <li>Ultimate access to all course, exercises and assessments</li>
+            <li>Free acess for all kind of exercise corrections with downloads.</li>
+            <li>Total assessment corrections with free download access system</li>
+            <li>Unlimited download of courses on the mobile app contents</li>
+            <li>Download and print courses and exercises in PDF</li>
+          </ul>
+           <div class="btn"><button class="Free-Premium-btn">Start free trail</button></div>
+        </div>
+        <div class="Premium">
+          <span class="recommended">Recommended</span>
+          <div class="Premium-head Free-Premium-head">
+            <div class="Premium-title">
+               <h4>Free Plan</h4>
+          <p>For Small teams or office</p>
+            </div>
+            <div class="Premium-price">
+              <p>Starting from <br> <span>49.99/mo</span></p>
+              
+            </div>
+          </div>
+          <ul>
+            <li>Ultimate access to all course, exercises and assessments</li>
+            <li>Free acess for all kind of exercise corrections with downloads.</li>
+            <li>Total assessment corrections with free download access system</li>
+            <li>Unlimited download of courses on the mobile app contents</li>
+            <li>Download and print courses and exercises in PDF</li>
+          </ul>
+         <div class="btn"> <button class="Free-Premium-btn">Subscribe Now</button></div>
+        </div>
+      </div>
       </div>
     </section>
   </body>
