--- a/index.html
+++ b/index.html
@@ -278,5 +278,106 @@
       </div>
       </div>
     </section>
+    <section class="Question-section">
+      <h3>Do you have any quesiton</h3>
+      <p>Our support team ready to help you, please contact with them</p>
+      <div class="Questions">
+        <details>
+          <summary>How to contact with riders emergency ?</summary>
+          <p>Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>
+            App installation failed, how to update system information?
+          </summary>
+           <p>Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>
+           Website reponse taking time, how to improve?
+          </summary>
+           <p>Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home.</p>
+        </details>
+        <hr>
+        <details>
+          <summary>
+            New update fixed all bug and issues
+          </summary>
+           <p>Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home collect a sample from management news. 
+            Get your blood tests delivered at the home.</p>
+        </details>
+        <hr>
+      </div>
+    </section>
+    <footer>
+     <div class="container">
+       <div>
+        <h4>Company</h4>
+           <p>About <br>
+Affiliate <br>
+Careers & Culture <br>
+Blog <br>
+Press</p>
+      </div>
+      <div>
+        <h4>About Us</h4>
+        <p>Support Center <br>
+Customer Support <br>
+About Us <br>
+Copyright <br>
+Popular Campaign</p>
+      </div>
+      <div>
+        <h4>Our Information</h4>
+        <p>Return Policy  <br>
+Privacy Policy <br>
+Terms & Conditions <br>
+Site Map <br>
+Store Hours</p>
+      </div>
+      <div>
+        <h4>My Account</h4>
+        <p>Press inquiries <br>
+Social media <br>
+directories <br>
+Images & B-roll <br>
+Permissions</p>
+      </div>
+      <div>
+        <h4>Policy</h4>
+        <p>Application security <br>
+Software principles <br> 
+Unwanted software policy <br>
+Responsible supply chain</p>
+      </div>
+     </div>
+     <hr>
+     <div class="copyright">
+      <div class="footer-logo">
+        <img src="assets/logo.png" alt="logo">
+      <p>Copyright by 2019 YourName, Inc</p>
+      </div>
+      <div class="footer-items">
+      </div>
+      <span>Home</span>
+      <span>Adversite</span>
+      <span>Supports</span>
+      <span>Marketing</span>
+      <span>FAQ</span>
+     </div>
+    </footer>
   </body>
 </html>
