Deleting the codes for responsive design.

--- a/index.html
+++ b/index.html
@@ -327,47 +327,47 @@
        <div>
         <h4>Company</h4>
            <p>About <br>
-Affiliate <br>
-Careers & Culture <br>
-Blog <br>
-Press</p>
+            Affiliate <br>
+            Careers & Culture <br>
+            Blog <br>
+            Press</p>
       </div>
       <div>
         <h4>About Us</h4>
         <p>Support Center <br>
-Customer Support <br>
-About Us <br>
-Copyright <br>
-Popular Campaign</p>
+           Customer Support <br>
+           About Us <br>
+           Copyright <br>
+           Popular Campaign</p>
       </div>
       <div>
         <h4>Our Information</h4>
         <p>Return Policy  <br>
-Privacy Policy <br>
-Terms & Conditions <br>
-Site Map <br>
-Store Hours</p>
+           Privacy Policy <br>
+           Terms & Conditions <br>
+           Site Map <br>
+           Store Hours</p>
       </div>
       <div>
         <h4>My Account</h4>
         <p>Press inquiries <br>
-Social media <br>
-directories <br>
-Images & B-roll <br>
-Permissions</p>
-      </div>
+           Social media <br>
+           directories <br>
+           Images & B-roll <br>
+           Permissions</p>
+      </div>           
       <div>
         <h4>Policy</h4>
         <p>Application security <br>
-Software principles <br> 
-Unwanted software policy <br>
-Responsible supply chain</p>
+           Software principles <br> 
+           Unwanted software policy <br>
+           Responsible supply chain</p>
       </div>
      </div>
      <hr>
      <div class="copyright">
       <div class="footer-logo">
-        <img src="assets/logo.png" alt="logo">
+        <img src="assets/logo.png" alt="logo" loading="lazy">
       <p>Copyright by 2019 YourName, Inc</p>
       </div>
       <div class="footer-items">
